components/finances/envs/prod/actual-server/version.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-server
spec:
  template:
    spec:
      containers:
        - name: actual-server
          image: ghcr.io/actualbudget/actual-server:26.10.0 # {"$imagepolicy": "flux-system:actual-server"}
