components/finances/envs/prod/actual-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-server
spec:
  ingressClassName: nginx-external
  rules:
    - host: actual.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: actual-server
                port:
                  name: https
